examples/test/testpolicy18248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18248
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key20: value3
      key38: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value47
          key48: value20
      podSelector:
        matchLabels:
          key35: value8
          key7: value7
          key23: value23
